--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <h2>About</h2>
             <p>Currently Enrolled in Los Angeles Pierce College pursuing a transfer to CSUN with a major in Computer Engineering</p>
             <h2>Experience</h2>
-            <p>SprinterShip @ FMAT - Agile Methodology</p>
+            <p>SprinterShip @ FCMAT - Agile Methodology</p>
+            <p></p>
 
             <h2>Skills</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
