--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <title>Alfredo Amezcua's Portfolio</title>
 </head>
 <body>
+    <div class="container">
+        <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
             <h2>Alfredo Amezcua</h2>
             <p>Canoga Park, USA.</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
-    
-      
+        </div>
+        <div class="section-2">
             <h2>About</h2>
             <p>Currently Enrolled in Los Angeles Pierce College pursuing a transfer to CSUN with a major in Computer Engineering</p>
             <h2>Experience</h2>
             <p>SprinterShip @ FCMAT - Agile Methodology</p>
-            <p></p>
-
             <h2>Skills</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
             <h2>Projects</h2>
@@ -33,5 +33,7 @@
             <a href="#">Project 5</a>
             <h2>Contact</h2>
             <p>amezcuaalfredo81@gmail.com</p>
+        </div>
+    </div>
 </body>
 </html>
