--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h2>Experience</h2>
             <p>SprinterShip @ FCMAT - Agile Methodology</p>
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
+            <p>Xcode, Git, Github, Swift, C++</p>
             <h2>Projects</h2>
             <a href="#">Project 1</a>
             <a href="#">Project 2</a>
